z-index fixed

--- a/src/assets/sass/page/_mp.scss
+++ b/src/assets/sass/page/_mp.scss
@@ -126,6 +126,10 @@ a.more {
       font-size: 1.5em;
       width: 10em;
     }
+    .btn-submit {
+      z-index: 1000;
+      position: relative;
+    }
   }
 }
 .main {
